24 September 2007
+ Added code to change thumbnails on multimedia files.
+ Updated flowplayer
+ Private folders are not viewable to the anoymous public.
+ Added function to Cabinet to get all file size limitations.
+ The settings form now lists all the above limitations.
+ Added ability to force a size to prewriteResize
+ Going to have icons thumbnails for audio. Not done yet.
+ Multimedia icon's file size is checked. If zero, replaced by the
  default.
+ Increased default thumbnail size.
+ Thumbnail should overlay on video properly now.
+ Added a short doc about ffmpeg

+ Updated: conf/config.php, templates/filters/flash.tpl
           templates/file_list.tpl, templates/multimedia_edit.tpl,
           templates/settings.tpl, templates/style.css
           templates/thumbnail.tpl

+ Copy directory - templates/filters/flash/


21 September 2007
+ Changed install to print 'incoming' instead of 'classify' as the
  directory name. Was confusing.
+ Added small file type icons for list view.
+ File name in list view is now a direct link to the document.

+ *** Note: update needs to copy img/icons/ directory ***

Version 1.2.2
--------------------------------------------------------------
18 September 2007
+ Added patch #1776068 to allow setting default no image size.

17 September 2007
+ Fixed mislabeled error messages in File_Common
+ Added option to resize a large image on upload.
+ Added option to turn an image 90 degrees clockwise or counter clock
  wise or 180 degrees on upload.
+ Increase image upload size to fit new options.
+ Moved resize function to Core File class.

Updated: templates/image_edit.tpl


Version 1.2.1
--------------------------------------------------------------
27 August 2007
+ Changing image file rights after upload and resizing to 644
+ Document permissions written as 640

26 August 2007
+ Fixed update script. Was missing filecabinet_pins table creation.

23 August 2007
+ Option add to auto link child resized images to parent.